Resolve issue #001: footer display misaligned

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,8 +23,13 @@ body {
     height: 50px;
 }
 
+.navbar {
+    color: #fff;
+    height: 50x;
+}
+
 .container {
-    /* max-width: 1100px;*/
+    max-width: 1100px;
     margin: auto;
     overflow: auto;
     padding: 10px;
@@ -105,13 +110,14 @@ background-color: blue;
 
 /* Footer styling */
 footer {
-    grid-area: foot;
-    height: 150px; 
+    grid-area: foot;  
+    height: 90px; 
     background-color:rgb(167, 248, 221);
 }
 
 .partners {
-    text-align: center;
+        text-align: center;
+    vertical-align:top; 
 }
 
 .partners li {
@@ -119,8 +125,11 @@ footer {
 }
 
 .partners i {
-    /* font-size: 160%; */
-    margin: 1%;
-    padding: 5%;
-    color: #3a3a3a
+     font-size: 160%;
+    /* margin: 10%; */
+    padding: 1%;
+    text-spacing:4px;
+    color: #3a3a3a;
+    margin: auto;
+    overflow: auto;
 }
